[package]
name = "rvemu-cli"
description = "RISC-V emulator CLI tool."
version = "0.0.2"
authors = ["Asami Doi"]
edition = "2018"
repository = "https://github.com/d0iasm/rvemu"
license = "MIT"
keywords = ["emulator", "riscv", "risc-v", "cli"]
categories = ["command-line-utilities"]

[features]
default = []
net-pcap = ["pcap"]

[dependencies]
clap = "2.33.3"
pcap = { version = "1.3.0", optional = true }
rvemu-core = { package="rvemu", path = "../../" }
